<resources>
    <string name="app_name">CodeCon</string>

    <string name="login_headline">Hello CodeCon!</string>
    <string name="login_loading">Loading…</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Sign in</string>
    <string name="logout">Sign out</string>
    <string name="home_headline">Gods of Code</string>

    <string name="item_god_name">Name: </string>
    <string name="item_god_title">Title: </string>
    <string name="item_god_desc">Desc: </string>
</resources>